MPDP-567 Fixing county_council wrap text issue (#131)

--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -111,6 +111,10 @@ $govuk-global-styles: true; // https://frontend.design-system.service.gov.uk/sas
   grid-template-rows: 3fr auto;
 }
 
+.mpdp-break-word {
+  word-wrap: break-word;
+}
+
 .mpdp-panel {
   background-color: $govuk-brand-colour;
   padding: 35px;
